<resources>
    <string name="app_name">MapMyJogOfficial</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"> </string>
    <string name="second_fragment_label"> </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment"> </string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="button_statistics">My Statistics</string>
    <string name="button_route">Plan My Route!</string>
    <string name="button_info">About Us</string>
    <string name="button_fitness"><![CDATA[Fitness&Health Resources]]></string>
    <string name="text_mapmyrun_old">MapMyRun</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_routeplanning">Map</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="text_measurement">Units of Measurement</string>
    <string name="button_settings">Settings</string>
    <string name="text_mapmyjog_old" />
    <string name="text_mapmyjog">MapMyJog</string>

</resources>