<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

    <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_first_fragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_first"
            app:layout_constraintHorizontal_bias="0.48" app:layout_constraintVertical_bias="0.309"
            tools:text="@string/text_mapmyrun"/>
    <Button
            android:id="@+id/button_info"
            android:text="@string/button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintVertical_bias="0.141"/>
    <Button
            android:id="@+id/button_stats"
            android:text="@string/button_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_route"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.006"/>
    <Button
            android:id="@+id/button_route"
            android:text="@string/button_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintVertical_bias="0.19999999" app:layout_constraintHorizontal_bias="0.47"
    />
    <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fitness"
            app:layout_constraintTop_toBottomOf="@id/button_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.266"/>
    <ImageView
            android:src="@drawable/mapmyjoglogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@id/textview_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/image_mapmyjog"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.498"/>

</androidx.constraintlayout.widget.ConstraintLayout>